Don't show GPU acceleration switch in preferences for WinXP
It would be helpful if there were no GPU acceleration switch on windows xp preferences since it doesn't work with it.
It would be helpful if there were no GPU acceleration switch on windows xp preferences since it doesn't work with it.
assigned to @geal
added Component::Interface: Qt label
changed milestone to %1.1.x maintenance
Close by [2f8eed35]
added Status::fixed label
closed
VideoLAN code repository instance