Qt: do not allow activation of DxVA2 in SPrefs on XP

XP is too old. Deal with it. Will ease support
Close #3727