modules/gui/qt4/components/simple_preferences.cpp
@@ -446,12 +446,17 @@ SPrefsPanel::SPrefsPanel( intf_thread_t *_p_intf, QWidget *_parent,
                 ui.live555TransportHTTPRadio->hide();
                 ui.live555TransportLabel->hide();
             }
+            CONFIG_BOOL( "ffmpeg-hw", hwAccelBox );
 #ifdef WIN32
             CONFIG_BOOL( "prefer-system-codecs", systemCodecBox );
+            HINSTANCE hdxva2_dll = LoadLibrary(TEXT("DXVA2.DLL") );
+            if( !hdxva2_dll )
+                ui.hwAccelBox->setEnabled( false );
+            else
+                FreeLibrary( hdxva2_dll );
 #else
             ui.systemCodecBox->hide();
 #endif
-            CONFIG_BOOL( "ffmpeg-hw", hwAccelBox );
             optionWidgets.append( ui.DVDDevice );
             optionWidgets.append( ui.cachingCombo );
             CONFIG_GENERIC( "ffmpeg-skiploopfilter", IntegerList, ui.filterLabel, loopFilterBox );
